--- a/program/cube2usg.html
+++ b/program/cube2usg.html
@@ -160,10 +160,10 @@
       <ul class="list-group">
       <li class="list-group-item">
   <ul class="list-inline">
-    <li><a href='../module/plot3d_operator.html'>plot3d_operator</a></li>
-    <li><a href='../module/array_m.html'>array_m</a></li>
     <li><a href='../module/vtk_operator_m.html'>VTK_operator_m</a></li>
+    <li><a href='../module/plot3d_operator.html'>plot3d_operator</a></li>
     <li><a href='../module/simplefile_reader.html'>simpleFile_reader</a></li>
+    <li><a href='../module/array_m.html'>array_m</a></li>
   </ul>
       </li>
       <li class="list-group-item">
@@ -184,18 +184,18 @@
 <polygon fill="none" stroke="black" points="389,-87 318,-87 318,-63 389,-63 389,-87"/>
 <text text-anchor="middle" x="353.5" y="-72.6" font-family="Helvetica,sans-Serif" font-size="10.50">CUBE2USG</text>
 </g>
-<!-- module~plot3d_operator -->
+<!-- module~vtk_operator_m -->
 <g id="program~~cube2usg~~UsesGraph_node2" class="node">
-<title>module~plot3d_operator</title>
-<g id="a_program~~cube2usg~~UsesGraph_node2"><a xlink:href=".././module/plot3d_operator.html" xlink:title="plot3d_operator">
-<polygon fill="#337ab7" stroke="#337ab7" points="278,-150 180,-150 180,-126 278,-126 278,-150"/>
-<text text-anchor="middle" x="229" y="-135.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">plot3d_operator</text>
+<title>module~vtk_operator_m</title>
+<g id="a_program~~cube2usg~~UsesGraph_node2"><a xlink:href=".././module/vtk_operator_m.html" xlink:title="VTK_operator_m">
+<polygon fill="#337ab7" stroke="#337ab7" points="279.5,-150 178.5,-150 178.5,-126 279.5,-126 279.5,-150"/>
+<text text-anchor="middle" x="229" y="-135.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">VTK_operator_m</text>
 </a>
 </g>
 </g>
-<!-- program~cube2usg&#45;&gt;module~plot3d_operator -->
+<!-- program~cube2usg&#45;&gt;module~vtk_operator_m -->
 <g id="program~~cube2usg~~UsesGraph_edge1" class="edge">
-<title>program~cube2usg&#45;&gt;module~plot3d_operator</title>
+<title>program~cube2usg&#45;&gt;module~vtk_operator_m</title>
 <path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M334.09,-87.03C320.11,-95.9 300.25,-107.95 282,-117 278.62,-118.68 275.07,-120.33 271.48,-121.92"/>
 <polygon fill="#000000" stroke="#000000" points="269.78,-118.84 261.97,-125.99 272.54,-125.28 269.78,-118.84"/>
 </g>
@@ -224,23 +224,23 @@
 </g>
 </g>
 <!-- program~cube2usg&#45;&gt;module~simplefile_reader -->
-<g id="program~~cube2usg~~UsesGraph_edge3" class="edge">
+<g id="program~~cube2usg~~UsesGraph_edge2" class="edge">
 <title>program~cube2usg&#45;&gt;module~simplefile_reader</title>
 <path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M317.72,-69.04C309.71,-67.66 300.94,-66.16 292.15,-64.65"/>
 <polygon fill="#000000" stroke="#000000" points="292.7,-61.2 282.25,-62.96 291.52,-68.1 292.7,-61.2"/>
 </g>
-<!-- module~vtk_operator_m -->
+<!-- module~plot3d_operator -->
 <g id="program~~cube2usg~~UsesGraph_node5" class="node">
-<title>module~vtk_operator_m</title>
-<g id="a_program~~cube2usg~~UsesGraph_node5"><a xlink:href=".././module/vtk_operator_m.html" xlink:title="VTK_operator_m">
-<polygon fill="#337ab7" stroke="#337ab7" points="279.5,-24 178.5,-24 178.5,0 279.5,0 279.5,-24"/>
-<text text-anchor="middle" x="229" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">VTK_operator_m</text>
+<title>module~plot3d_operator</title>
+<g id="a_program~~cube2usg~~UsesGraph_node5"><a xlink:href=".././module/plot3d_operator.html" xlink:title="plot3d_operator">
+<polygon fill="#337ab7" stroke="#337ab7" points="278,-24 180,-24 180,0 278,0 278,-24"/>
+<text text-anchor="middle" x="229" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">plot3d_operator</text>
 </a>
 </g>
 </g>
-<!-- program~cube2usg&#45;&gt;module~vtk_operator_m -->
-<g id="program~~cube2usg~~UsesGraph_edge2" class="edge">
-<title>program~cube2usg&#45;&gt;module~vtk_operator_m</title>
+<!-- program~cube2usg&#45;&gt;module~plot3d_operator -->
+<g id="program~~cube2usg~~UsesGraph_edge3" class="edge">
+<title>program~cube2usg&#45;&gt;module~plot3d_operator</title>
 <path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M334.09,-62.97C320.11,-54.1 300.25,-42.05 282,-33 278.62,-31.32 275.07,-29.67 271.48,-28.08"/>
 <polygon fill="#000000" stroke="#000000" points="272.54,-24.72 261.97,-24.01 269.78,-31.16 272.54,-24.72"/>
 </g>
@@ -248,16 +248,16 @@
 <g id="program~~cube2usg~~UsesGraph_node6" class="node">
 <title>module~unstructuredelement_m</title>
 <g id="a_program~~cube2usg~~UsesGraph_node6"><a xlink:href=".././module/unstructuredelement_m.html" xlink:title="unstructuredElement_m">
-<polygon fill="#337ab7" stroke="#337ab7" points="140,-24 0,-24 0,0 140,0 140,-24"/>
-<text text-anchor="middle" x="70" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">unstructuredElement_m</text>
+<polygon fill="#337ab7" stroke="#337ab7" points="140,-150 0,-150 0,-126 140,-126 140,-150"/>
+<text text-anchor="middle" x="70" y="-135.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">unstructuredElement_m</text>
 </a>
 </g>
 </g>
 <!-- module~vtk_operator_m&#45;&gt;module~unstructuredelement_m -->
 <g id="program~~cube2usg~~UsesGraph_edge5" class="edge">
 <title>module~vtk_operator_m&#45;&gt;module~unstructuredelement_m</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M178.32,-12C169.42,-12 159.94,-12 150.44,-12"/>
-<polygon fill="#000000" stroke="#000000" points="150.15,-8.5 140.15,-12 150.15,-15.5 150.15,-8.5"/>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M178.32,-138C169.42,-138 159.94,-138 150.44,-138"/>
+<polygon fill="#000000" stroke="#000000" points="150.15,-134.5 140.15,-138 150.15,-141.5 150.15,-134.5"/>
 </g>
 </g>
 </svg>
@@ -362,20 +362,20 @@
 <path fill="none" stroke="#000000" d="M53.8,-108.01C67.67,-117.22 87.92,-129.72 107,-138 111.69,-140.04 116.63,-141.94 121.64,-143.7"/>
 <polygon fill="#000000" stroke="#000000" points="120.72,-147.08 131.31,-146.92 122.93,-140.44 120.72,-147.08"/>
 </g>
-<!-- proc~read_plot3d_multigrid -->
+<!-- proc~output_2darray_asbinary -->
 <g id="program~~cube2usg~~CallsGraph_node3" class="node">
-<title>proc~read_plot3d_multigrid</title>
-<g id="a_program~~cube2usg~~CallsGraph_node3"><a xlink:href=".././proc/read_plot3d_multigrid.html" xlink:title="read_plot3d_multigrid">
-<polygon fill="#d94e8f" stroke="#d94e8f" points="245,-129 116,-129 116,-105 245,-105 245,-129"/>
-<text text-anchor="middle" x="180.5" y="-114.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">read_plot3d_multigrid</text>
+<title>proc~output_2darray_asbinary</title>
+<g id="a_program~~cube2usg~~CallsGraph_node3"><a xlink:href=".././proc/output_2darray_asbinary.html" xlink:title="output_2dArray_asBinary">
+<polygon fill="#d9534f" stroke="#d9534f" points="254,-129 107,-129 107,-105 254,-105 254,-129"/>
+<text text-anchor="middle" x="180.5" y="-114.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">output_2dArray_asBinary</text>
 </a>
 </g>
 </g>
-<!-- program~cube2usg&#45;&gt;proc~read_plot3d_multigrid -->
+<!-- program~cube2usg&#45;&gt;proc~output_2darray_asbinary -->
 <g id="program~~cube2usg~~CallsGraph_edge2" class="edge">
-<title>program~cube2usg&#45;&gt;proc~read_plot3d_multigrid</title>
-<path fill="none" stroke="#000000" d="M71.12,-101.08C81.64,-102.63 93.64,-104.39 105.72,-106.16"/>
-<polygon fill="#000000" stroke="#000000" points="105.46,-109.66 115.86,-107.65 106.47,-102.74 105.46,-109.66"/>
+<title>program~cube2usg&#45;&gt;proc~output_2darray_asbinary</title>
+<path fill="none" stroke="#000000" d="M71.12,-101.08C78.98,-102.24 87.67,-103.51 96.6,-104.83"/>
+<polygon fill="#000000" stroke="#000000" points="96.36,-108.33 106.76,-106.32 97.37,-101.4 96.36,-108.33"/>
 </g>
 <!-- proc~solve_correspondence -->
 <g id="program~~cube2usg~~CallsGraph_node4" class="node">
@@ -392,18 +392,18 @@
 <path fill="none" stroke="#000000" d="M71.12,-90.92C81.22,-89.43 92.67,-87.75 104.26,-86.05"/>
 <polygon fill="#000000" stroke="#000000" points="105.05,-89.47 114.44,-84.55 104.04,-82.54 105.05,-89.47"/>
 </g>
-<!-- proc~output_2darray_asbinary -->
+<!-- proc~read_plot3d_multigrid -->
 <g id="program~~cube2usg~~CallsGraph_node5" class="node">
-<title>proc~output_2darray_asbinary</title>
-<g id="a_program~~cube2usg~~CallsGraph_node5"><a xlink:href=".././proc/output_2darray_asbinary.html" xlink:title="output_2dArray_asBinary">
-<polygon fill="#d9534f" stroke="#d9534f" points="254,-45 107,-45 107,-21 254,-21 254,-45"/>
-<text text-anchor="middle" x="180.5" y="-30.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">output_2dArray_asBinary</text>
+<title>proc~read_plot3d_multigrid</title>
+<g id="a_program~~cube2usg~~CallsGraph_node5"><a xlink:href=".././proc/read_plot3d_multigrid.html" xlink:title="read_plot3d_multigrid">
+<polygon fill="#d94e8f" stroke="#d94e8f" points="245,-45 116,-45 116,-21 245,-21 245,-45"/>
+<text text-anchor="middle" x="180.5" y="-30.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">read_plot3d_multigrid</text>
 </a>
 </g>
 </g>
-<!-- program~cube2usg&#45;&gt;proc~output_2darray_asbinary -->
+<!-- program~cube2usg&#45;&gt;proc~read_plot3d_multigrid -->
 <g id="program~~cube2usg~~CallsGraph_edge4" class="edge">
-<title>program~cube2usg&#45;&gt;proc~output_2darray_asbinary</title>
+<title>program~cube2usg&#45;&gt;proc~read_plot3d_multigrid</title>
 <path fill="none" stroke="#000000" d="M53.8,-83.99C67.67,-74.78 87.92,-62.28 107,-54 111.69,-51.96 116.63,-50.06 121.64,-48.3"/>
 <polygon fill="#000000" stroke="#000000" points="122.93,-51.56 131.31,-45.08 120.72,-44.92 122.93,-51.56"/>
 </g>
@@ -467,48 +467,48 @@
 <path fill="none" stroke="#000000" d="M370.81,-87.08C377.21,-89.87 383.88,-92.92 390,-96 406.54,-104.33 409.54,-108.51 426,-117 428.91,-118.5 431.96,-120.01 435.03,-121.49"/>
 <polygon fill="#000000" stroke="#000000" points="433.7,-124.73 444.24,-125.81 436.67,-118.39 433.7,-124.73"/>
 </g>
-<!-- proc~get_cellcenters -->
-<g id="program~~cube2usg~~CallsGraph_node10" class="node">
-<title>proc~get_cellcenters</title>
-<g id="a_program~~cube2usg~~CallsGraph_node10"><a xlink:href=".././proc/get_cellcenters.html" xlink:title="get_cellCenters">
-<polygon fill="#d94e8f" stroke="#d94e8f" points="521,-108 426,-108 426,-84 521,-84 521,-108"/>
-<text text-anchor="middle" x="473.5" y="-93.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">get_cellCenters</text>
-</a>
-</g>
-</g>
-<!-- proc~search_nodeinfo&#45;&gt;proc~get_cellcenters -->
-<g id="program~~cube2usg~~CallsGraph_edge9" class="edge">
-<title>proc~search_nodeinfo&#45;&gt;proc~get_cellcenters</title>
-<path fill="none" stroke="#000000" d="M390.34,-82.88C398.72,-84.22 407.48,-85.62 416.03,-86.98"/>
-<polygon fill="#000000" stroke="#000000" points="415.5,-90.44 425.93,-88.56 416.61,-83.53 415.5,-90.44"/>
-</g>
 <!-- interface~print_progress -->
-<g id="program~~cube2usg~~CallsGraph_node11" class="node">
+<g id="program~~cube2usg~~CallsGraph_node10" class="node">
 <title>interface~print_progress</title>
-<g id="a_program~~cube2usg~~CallsGraph_node11"><a xlink:href=".././interface/print_progress.html" xlink:title="print_progress">
-<polygon fill="#a7506f" stroke="#a7506f" points="517.5,-66 429.5,-66 429.5,-42 517.5,-42 517.5,-66"/>
-<text text-anchor="middle" x="473.5" y="-51.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">print_progress</text>
+<g id="a_program~~cube2usg~~CallsGraph_node10"><a xlink:href=".././interface/print_progress.html" xlink:title="print_progress">
+<polygon fill="#a7506f" stroke="#a7506f" points="517.5,-108 429.5,-108 429.5,-84 517.5,-84 517.5,-108"/>
+<text text-anchor="middle" x="473.5" y="-93.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">print_progress</text>
 </a>
 </g>
 </g>
 <!-- proc~search_nodeinfo&#45;&gt;interface~print_progress -->
-<g id="program~~cube2usg~~CallsGraph_edge10" class="edge">
+<g id="program~~cube2usg~~CallsGraph_edge9" class="edge">
 <title>proc~search_nodeinfo&#45;&gt;interface~print_progress</title>
-<path fill="none" stroke="#000000" d="M390.34,-67.12C399.76,-65.62 409.66,-64.04 419.2,-62.51"/>
-<polygon fill="#000000" stroke="#000000" points="420.04,-65.92 429.36,-60.89 418.94,-59.01 420.04,-65.92"/>
+<path fill="none" stroke="#000000" d="M390.34,-82.88C399.76,-84.38 409.66,-85.96 419.2,-87.49"/>
+<polygon fill="#000000" stroke="#000000" points="418.94,-90.99 429.36,-89.11 420.04,-84.08 418.94,-90.99"/>
 </g>
 <!-- proc~set_formattc -->
-<g id="program~~cube2usg~~CallsGraph_node12" class="node">
+<g id="program~~cube2usg~~CallsGraph_node11" class="node">
 <title>proc~set_formattc</title>
-<g id="a_program~~cube2usg~~CallsGraph_node12"><a xlink:href=".././proc/set_formattc.html" xlink:title="set_formatTC">
-<polygon fill="#d9534f" stroke="#d9534f" points="515,-24 432,-24 432,0 515,0 515,-24"/>
-<text text-anchor="middle" x="473.5" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">set_formatTC</text>
+<g id="a_program~~cube2usg~~CallsGraph_node11"><a xlink:href=".././proc/set_formattc.html" xlink:title="set_formatTC">
+<polygon fill="#d9534f" stroke="#d9534f" points="515,-66 432,-66 432,-42 515,-42 515,-66"/>
+<text text-anchor="middle" x="473.5" y="-51.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">set_formatTC</text>
 </a>
 </g>
 </g>
 <!-- proc~search_nodeinfo&#45;&gt;proc~set_formattc -->
 <g id="program~~cube2usg~~CallsGraph_edge11" class="edge">
 <title>proc~search_nodeinfo&#45;&gt;proc~set_formattc</title>
+<path fill="none" stroke="#000000" d="M390.34,-67.12C400.62,-65.48 411.46,-63.75 421.79,-62.1"/>
+<polygon fill="#000000" stroke="#000000" points="422.57,-65.52 431.9,-60.48 421.47,-58.6 422.57,-65.52"/>
+</g>
+<!-- proc~get_cellcenters -->
+<g id="program~~cube2usg~~CallsGraph_node12" class="node">
+<title>proc~get_cellcenters</title>
+<g id="a_program~~cube2usg~~CallsGraph_node12"><a xlink:href=".././proc/get_cellcenters.html" xlink:title="get_cellCenters">
+<polygon fill="#d94e8f" stroke="#d94e8f" points="521,-24 426,-24 426,0 521,0 521,-24"/>
+<text text-anchor="middle" x="473.5" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">get_cellCenters</text>
+</a>
+</g>
+</g>
+<!-- proc~search_nodeinfo&#45;&gt;proc~get_cellcenters -->
+<g id="program~~cube2usg~~CallsGraph_edge10" class="edge">
+<title>proc~search_nodeinfo&#45;&gt;proc~get_cellcenters</title>
 <path fill="none" stroke="#000000" d="M370.81,-62.92C377.21,-60.13 383.88,-57.08 390,-54 406.54,-45.67 409.54,-41.49 426,-33 428.91,-31.5 431.96,-29.99 435.03,-28.51"/>
 <polygon fill="#000000" stroke="#000000" points="436.67,-31.61 444.24,-24.19 433.7,-25.27 436.67,-31.61"/>
 </g>
