--- a/sourcefile/cube2usg.f90.html
+++ b/sourcefile/cube2usg.f90.html
@@ -152,23 +152,23 @@
 <!-- sourcefile~cube2usg.f90 -->
 <g id="sourcefile~~cube2usg.f90~~EfferentGraph_node1" class="node">
 <title>sourcefile~cube2usg.f90</title>
-<polygon fill="none" stroke="black" points="435,-146 344,-146 344,-122 435,-122 435,-146"/>
-<text text-anchor="middle" x="389.5" y="-131.6" font-family="Helvetica,sans-Serif" font-size="10.50">CUBE2USG.f90</text>
+<polygon fill="none" stroke="black" points="435,-150 344,-150 344,-126 435,-126 435,-150"/>
+<text text-anchor="middle" x="389.5" y="-135.6" font-family="Helvetica,sans-Serif" font-size="10.50">CUBE2USG.f90</text>
 </g>
-<!-- sourcefile~array.f90 -->
+<!-- sourcefile~plot3d_operator.f90 -->
 <g id="sourcefile~~cube2usg.f90~~EfferentGraph_node2" class="node">
-<title>sourcefile~array.f90</title>
-<g id="a_sourcefile~~cube2usg.f90~~EfferentGraph_node2"><a xlink:href=".././sourcefile/array.f90.html" xlink:title="array.f90">
-<polygon fill="#f0ad4e" stroke="#f0ad4e" points="274.5,-272 214.5,-272 214.5,-248 274.5,-248 274.5,-272"/>
-<text text-anchor="middle" x="244.5" y="-257.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">array.f90</text>
+<title>sourcefile~plot3d_operator.f90</title>
+<g id="a_sourcefile~~cube2usg.f90~~EfferentGraph_node2"><a xlink:href=".././sourcefile/plot3d_operator.f90.html" xlink:title="plot3d_operator.f90">
+<polygon fill="#f0ad4e" stroke="#f0ad4e" points="303,-272 186,-272 186,-248 303,-248 303,-272"/>
+<text text-anchor="middle" x="244.5" y="-257.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">plot3d_operator.f90</text>
 </a>
 </g>
 </g>
-<!-- sourcefile~cube2usg.f90&#45;&gt;sourcefile~array.f90 -->
+<!-- sourcefile~cube2usg.f90&#45;&gt;sourcefile~plot3d_operator.f90 -->
 <g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge1" class="edge">
-<title>sourcefile~cube2usg.f90&#45;&gt;sourcefile~array.f90</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M382.29,-146.28C370.65,-168.08 343.51,-213.63 308,-239 300.9,-244.07 292.5,-247.98 284.19,-250.98"/>
-<polygon fill="#000000" stroke="#000000" points="283,-247.68 274.56,-254.09 285.15,-254.34 283,-247.68"/>
+<title>sourcefile~cube2usg.f90&#45;&gt;sourcefile~plot3d_operator.f90</title>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M381.98,-150.14C370.05,-171.22 342.71,-214.69 308,-239 305.75,-240.58 303.37,-242.04 300.91,-243.4"/>
+<polygon fill="#000000" stroke="#000000" points="299.15,-240.37 291.7,-247.89 302.22,-246.66 299.15,-240.37"/>
 </g>
 <!-- sourcefile~terminalcontroler.f90 -->
 <g id="sourcefile~~cube2usg.f90~~EfferentGraph_node3" class="node">
@@ -180,91 +180,91 @@
 </g>
 </g>
 <!-- sourcefile~cube2usg.f90&#45;&gt;sourcefile~terminalcontroler.f90 -->
-<g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge4" class="edge">
+<g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge5" class="edge">
 <title>sourcefile~cube2usg.f90&#45;&gt;sourcefile~terminalcontroler.f90</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M375.81,-146.2C360.71,-160.15 334.25,-182.86 308,-197 304.68,-198.79 301.18,-200.46 297.6,-202.03"/>
-<polygon fill="#000000" stroke="#000000" points="295.98,-198.91 288.01,-205.9 298.6,-205.4 295.98,-198.91"/>
-</g>
-<!-- sourcefile~plot3d_operator.f90 -->
-<g id="sourcefile~~cube2usg.f90~~EfferentGraph_node4" class="node">
-<title>sourcefile~plot3d_operator.f90</title>
-<g id="a_sourcefile~~cube2usg.f90~~EfferentGraph_node4"><a xlink:href=".././sourcefile/plot3d_operator.f90.html" xlink:title="plot3d_operator.f90">
-<polygon fill="#f0ad4e" stroke="#f0ad4e" points="303,-188 186,-188 186,-164 303,-164 303,-188"/>
-<text text-anchor="middle" x="244.5" y="-173.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">plot3d_operator.f90</text>
-</a>
-</g>
-</g>
-<!-- sourcefile~cube2usg.f90&#45;&gt;sourcefile~plot3d_operator.f90 -->
-<g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge2" class="edge">
-<title>sourcefile~cube2usg.f90&#45;&gt;sourcefile~plot3d_operator.f90</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M347.52,-146.04C331.52,-150.74 313,-156.18 296.17,-161.12"/>
-<polygon fill="#000000" stroke="#000000" points="295.09,-157.79 286.48,-163.96 297.07,-164.5 295.09,-157.79"/>
-</g>
-<!-- sourcefile~timekeeper.f90 -->
-<g id="sourcefile~~cube2usg.f90~~EfferentGraph_node5" class="node">
-<title>sourcefile~timekeeper.f90</title>
-<g id="a_sourcefile~~cube2usg.f90~~EfferentGraph_node5"><a xlink:href=".././sourcefile/timekeeper.f90.html" xlink:title="timeKeeper.f90">
-<polygon fill="#f0ad4e" stroke="#f0ad4e" points="291,-146 198,-146 198,-122 291,-122 291,-146"/>
-<text text-anchor="middle" x="244.5" y="-131.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">timeKeeper.f90</text>
-</a>
-</g>
-</g>
-<!-- sourcefile~cube2usg.f90&#45;&gt;sourcefile~timekeeper.f90 -->
-<g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge3" class="edge">
-<title>sourcefile~cube2usg.f90&#45;&gt;sourcefile~timekeeper.f90</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M343.65,-134C330.2,-134 315.29,-134 301.23,-134"/>
-<polygon fill="#000000" stroke="#000000" points="301.18,-130.5 291.18,-134 301.18,-137.5 301.18,-130.5"/>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M372.44,-150.15C356.6,-161.8 331.43,-179.43 308,-192 301.45,-195.51 294.32,-198.88 287.3,-201.96"/>
+<polygon fill="#000000" stroke="#000000" points="285.7,-198.83 277.86,-205.95 288.43,-205.28 285.7,-198.83"/>
 </g>
 <!-- sourcefile~unstructuredelement.f90 -->
-<g id="sourcefile~~cube2usg.f90~~EfferentGraph_node6" class="node">
+<g id="sourcefile~~cube2usg.f90~~EfferentGraph_node4" class="node">
 <title>sourcefile~unstructuredelement.f90</title>
-<g id="a_sourcefile~~cube2usg.f90~~EfferentGraph_node6"><a xlink:href=".././sourcefile/unstructuredelement.f90.html" xlink:title="unstructuredElement.f90">
-<polygon fill="#f0ad4e" stroke="#f0ad4e" points="145,-86 0,-86 0,-62 145,-62 145,-86"/>
-<text text-anchor="middle" x="72.5" y="-71.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">unstructuredElement.f90</text>
+<g id="a_sourcefile~~cube2usg.f90~~EfferentGraph_node4"><a xlink:href=".././sourcefile/unstructuredelement.f90.html" xlink:title="unstructuredElement.f90">
+<polygon fill="#f0ad4e" stroke="#f0ad4e" points="145,-149 0,-149 0,-125 145,-125 145,-149"/>
+<text text-anchor="middle" x="72.5" y="-134.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">unstructuredElement.f90</text>
 </a>
 </g>
 </g>
 <!-- sourcefile~cube2usg.f90&#45;&gt;sourcefile~unstructuredelement.f90 -->
-<g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge5" class="edge">
+<g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge2" class="edge">
 <title>sourcefile~cube2usg.f90&#45;&gt;sourcefile~unstructuredelement.f90</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M345.22,-121.94C333.22,-118.81 320.15,-115.59 308,-113 257.53,-102.24 200.41,-92.69 155.19,-85.73"/>
-<polygon fill="#000000" stroke="#000000" points="155.55,-82.25 145.14,-84.2 154.5,-89.17 155.55,-82.25"/>
-</g>
-<!-- sourcefile~vtkmesh_operator.f90 -->
-<g id="sourcefile~~cube2usg.f90~~EfferentGraph_node7" class="node">
-<title>sourcefile~vtkmesh_operator.f90</title>
-<g id="a_sourcefile~~cube2usg.f90~~EfferentGraph_node7"><a xlink:href=".././sourcefile/vtkmesh_operator.f90.html" xlink:title="vtkMesh_operator.f90">
-<polygon fill="#f0ad4e" stroke="#f0ad4e" points="308,-66 181,-66 181,-42 308,-42 308,-66"/>
-<text text-anchor="middle" x="244.5" y="-51.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">vtkMesh_operator.f90</text>
-</a>
-</g>
-</g>
-<!-- sourcefile~cube2usg.f90&#45;&gt;sourcefile~vtkmesh_operator.f90 -->
-<g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge6" class="edge">
-<title>sourcefile~cube2usg.f90&#45;&gt;sourcefile~vtkmesh_operator.f90</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M372.44,-121.85C356.6,-110.2 331.43,-92.57 308,-80 301.45,-76.49 294.32,-73.12 287.3,-70.04"/>
-<polygon fill="#000000" stroke="#000000" points="288.43,-66.72 277.86,-66.05 285.7,-73.17 288.43,-66.72"/>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M350.4,-150.07C337.13,-153.7 322.04,-157.2 308,-159 252.01,-166.18 237.16,-164.69 181,-159 164.91,-157.37 147.67,-154.4 131.81,-151.16"/>
+<polygon fill="#000000" stroke="#000000" points="132.12,-147.65 121.61,-149 130.67,-154.5 132.12,-147.65"/>
 </g>
 <!-- sourcefile~simplefile_reader.f90 -->
-<g id="sourcefile~~cube2usg.f90~~EfferentGraph_node8" class="node">
+<g id="sourcefile~~cube2usg.f90~~EfferentGraph_node5" class="node">
 <title>sourcefile~simplefile_reader.f90</title>
-<g id="a_sourcefile~~cube2usg.f90~~EfferentGraph_node8"><a xlink:href=".././sourcefile/simplefile_reader.f90.html" xlink:title="simpleFile_reader.f90">
-<polygon fill="#f0ad4e" stroke="#f0ad4e" points="307,-24 182,-24 182,0 307,0 307,-24"/>
-<text text-anchor="middle" x="244.5" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">simpleFile_reader.f90</text>
+<g id="a_sourcefile~~cube2usg.f90~~EfferentGraph_node5"><a xlink:href=".././sourcefile/simplefile_reader.f90.html" xlink:title="simpleFile_reader.f90">
+<polygon fill="#f0ad4e" stroke="#f0ad4e" points="307,-150 182,-150 182,-126 307,-126 307,-150"/>
+<text text-anchor="middle" x="244.5" y="-135.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">simpleFile_reader.f90</text>
 </a>
 </g>
 </g>
 <!-- sourcefile~cube2usg.f90&#45;&gt;sourcefile~simplefile_reader.f90 -->
-<g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge7" class="edge">
+<g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge4" class="edge">
 <title>sourcefile~cube2usg.f90&#45;&gt;sourcefile~simplefile_reader.f90</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M381.98,-121.86C370.05,-100.78 342.71,-57.31 308,-33 305.75,-31.42 303.37,-29.96 300.91,-28.6"/>
-<polygon fill="#000000" stroke="#000000" points="302.22,-25.34 291.7,-24.11 299.15,-31.63 302.22,-25.34"/>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M343.65,-138C335.26,-138 326.29,-138 317.32,-138"/>
+<polygon fill="#000000" stroke="#000000" points="317.22,-134.5 307.22,-138 317.22,-141.5 317.22,-134.5"/>
+</g>
+<!-- sourcefile~vtkmesh_operator.f90 -->
+<g id="sourcefile~~cube2usg.f90~~EfferentGraph_node6" class="node">
+<title>sourcefile~vtkmesh_operator.f90</title>
+<g id="a_sourcefile~~cube2usg.f90~~EfferentGraph_node6"><a xlink:href=".././sourcefile/vtkmesh_operator.f90.html" xlink:title="vtkMesh_operator.f90">
+<polygon fill="#f0ad4e" stroke="#f0ad4e" points="308,-108 181,-108 181,-84 308,-84 308,-108"/>
+<text text-anchor="middle" x="244.5" y="-93.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">vtkMesh_operator.f90</text>
+</a>
+</g>
+</g>
+<!-- sourcefile~cube2usg.f90&#45;&gt;sourcefile~vtkmesh_operator.f90 -->
+<g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge3" class="edge">
+<title>sourcefile~cube2usg.f90&#45;&gt;sourcefile~vtkmesh_operator.f90</title>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M347.52,-125.96C331.52,-121.26 313,-115.82 296.17,-110.88"/>
+<polygon fill="#000000" stroke="#000000" points="297.07,-107.5 286.48,-108.04 295.09,-114.21 297.07,-107.5"/>
+</g>
+<!-- sourcefile~array.f90 -->
+<g id="sourcefile~~cube2usg.f90~~EfferentGraph_node7" class="node">
+<title>sourcefile~array.f90</title>
+<g id="a_sourcefile~~cube2usg.f90~~EfferentGraph_node7"><a xlink:href=".././sourcefile/array.f90.html" xlink:title="array.f90">
+<polygon fill="#f0ad4e" stroke="#f0ad4e" points="274.5,-66 214.5,-66 214.5,-42 274.5,-42 274.5,-66"/>
+<text text-anchor="middle" x="244.5" y="-51.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">array.f90</text>
+</a>
+</g>
+</g>
+<!-- sourcefile~cube2usg.f90&#45;&gt;sourcefile~array.f90 -->
+<g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge6" class="edge">
+<title>sourcefile~cube2usg.f90&#45;&gt;sourcefile~array.f90</title>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M375.81,-125.8C360.71,-111.85 334.25,-89.14 308,-75 300.62,-71.02 292.35,-67.61 284.3,-64.75"/>
+<polygon fill="#000000" stroke="#000000" points="285.26,-61.38 274.67,-61.55 283.05,-68.02 285.26,-61.38"/>
+</g>
+<!-- sourcefile~timekeeper.f90 -->
+<g id="sourcefile~~cube2usg.f90~~EfferentGraph_node8" class="node">
+<title>sourcefile~timekeeper.f90</title>
+<g id="a_sourcefile~~cube2usg.f90~~EfferentGraph_node8"><a xlink:href=".././sourcefile/timekeeper.f90.html" xlink:title="timeKeeper.f90">
+<polygon fill="#f0ad4e" stroke="#f0ad4e" points="291,-24 198,-24 198,0 291,0 291,-24"/>
+<text text-anchor="middle" x="244.5" y="-9.6" font-family="Helvetica,sans-Serif" font-size="10.50" fill="white">timeKeeper.f90</text>
+</a>
+</g>
+</g>
+<!-- sourcefile~cube2usg.f90&#45;&gt;sourcefile~timekeeper.f90 -->
+<g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge7" class="edge">
+<title>sourcefile~cube2usg.f90&#45;&gt;sourcefile~timekeeper.f90</title>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M382.29,-125.72C370.65,-103.92 343.51,-58.37 308,-33 305.52,-31.23 302.88,-29.6 300.14,-28.1"/>
+<polygon fill="#000000" stroke="#000000" points="301.64,-24.93 291.11,-23.74 298.6,-31.24 301.64,-24.93"/>
 </g>
 <!-- sourcefile~vtkmesh_operator.f90&#45;&gt;sourcefile~unstructuredelement.f90 -->
 <g id="sourcefile~~cube2usg.f90~~EfferentGraph_edge8" class="edge">
 <title>sourcefile~vtkmesh_operator.f90&#45;&gt;sourcefile~unstructuredelement.f90</title>
-<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M180.68,-61.39C172.39,-62.37 163.79,-63.38 155.24,-64.38"/>
-<polygon fill="#000000" stroke="#000000" points="154.76,-60.92 145.24,-65.56 155.58,-67.87 154.76,-60.92"/>
+<path fill="none" stroke="#000000" stroke-dasharray="5,2" d="M193.41,-108.08C174.56,-112.63 152.94,-117.84 133.29,-122.58"/>
+<polygon fill="#000000" stroke="#000000" points="132.42,-119.19 123.52,-124.94 134.06,-125.99 132.42,-119.19"/>
 </g>
 </g>
 </svg>
